# auto-water

./: history.py  main.py  pyproject.toml
boards/: ft232.py  hardware.py  hardware_factory.py  mockBoard.py  raspi.py
inputs/: moisture_sensor.py
outputs/: water_servo.py
static/: dashboard.html
