[project]
name = "auto-water"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.5"
dependencies = [
    "adafruit-blinka>=8.70.0",
    "adafruit-circuitpython-ads1x15>=3.0.2",
    "bottle>=0.13.4",
    "image>=1.5.33",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pyftdi>=0.57.1",
]
