[project]
name = "auto-water"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.5"
dependencies = [
    "adafruit-blinka>=8.70.0",
    "adafruit-circuitpython-ads1x15>=3.0.2",
    "bottle>=0.13.4",
    #    "image>=1.5.33",
    "gpiozero>=2.0.1",
    "pyftdi>=0.57.1",
    "rpi-gpio>=0.7.1",
]
